[workspace]
resolver = "2"
members = ["./owowon-gui", "./owowon-tinker-cli"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[package]
name = "owowon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.24", features = ["macros", "sync", "time"] }
windows = { version = "0.48", features = [
  "Devices_Enumeration",
  "Devices_Usb",
  "Foundation_Collections",
  "Storage_Streams",
] }
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_json = "1"
derive_more = "0.99"
arrayvec = "0.7"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
