[workspace]
resolver = "2"
members = ["./owowon-gui", "./owowon-tinker-cli"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.36" }
windows = { version = "0.54.0" }
snafu = "0.8.2"
serde = "1"

[package]
name = "owowon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "sync", "time"] }
windows = { workspace = true, features = [
  "Devices_Enumeration",
  "Devices_Usb",
  "Foundation_Collections",
  "Storage_Streams",
] }
snafu = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_with = "3"
serde_json = "1"
derive_more = "0.99"
arrayvec = "0.7"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
