[package]
name = "owowon-gui"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
egui = { version = "0.20.1" }
eframe = { version = "0.20.1", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
snmalloc-rs = "0.3"
tokio = { version = "1.24", features = ["rt"] }
float-cmp = "0.9.0"
windows = { version = "0.44", features = [
  "implement",
  "Foundation",
  "Foundation_Collections",
  "Devices_Enumeration",
  "Devices_Usb",
  "Win32_Foundation",
  "Win32_UI_Shell",
] }

owowon = { path = ".." }
