[package]
name = "owowon-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
egui = { version = "0.22" }
eframe = { version = "0.22", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
snmalloc-rs = "0.3"
tokio = { version = "1.24", features = ["rt"] }
float-cmp = "0.9"
windows = { version = "0.48", features = [
  "implement",
  "Foundation",
  "Foundation_Collections",
  "Devices_Enumeration",
  "Devices_Usb",
  "Win32_Foundation",
  "Win32_UI_Shell",
] }

owowon = { path = ".." }
