[package]
name = "owowon-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
egui = { version = "0.26" }
egui_plot = { version = "0.26" }
eframe = { version = "0.26", features = ["persistence"] }
serde = { workspace = true, features = ["derive"] }
snmalloc-rs = "0.3"
tokio = { workspace = true, features = ["rt"] }
float-cmp = "0.9"
windows = { workspace = true, features = [
  "implement",
  "Foundation",
  "Foundation_Collections",
  "Devices_Enumeration",
  "Devices_Usb",
  "Win32_Foundation",
  "Win32_UI_Shell",
] }

owowon = { path = ".." }
