[package]
name = "owowon-tinker-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.24", features = ["rt-multi-thread"] }
pretty-hex = "0.3"
windows = { version = "0.51.1", features = [
  "Devices_Enumeration",
  "Devices_Usb",
  "Foundation_Collections",
  "Storage_Streams",
] }

owowon = { path = ".." }
