[package]
name = "owowon-tinker-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
pretty-hex = "0.4"
windows = { workspace = true, features = [
  "Devices_Enumeration",
  "Devices_Usb",
  "Foundation_Collections",
  "Storage_Streams",
] }

owowon = { path = ".." }
